# discord_vn

./: .gitignore  Cargo.toml  README.md
.github/release_template/: config.conf
.github/workflows/: cd.yml  ci.yml
docs/: README.md
examples/: arc.rs  dialogue.rs  discord.rs  engine.rs  read_config.rs  read_script.rs  scene.rs  stroke.rs
src/: lib.rs  main.rs
src/discord/: display.rs  errors.rs  handler.rs  mod.rs  voice.rs
src/engine/: config.rs  directives.rs  engine.rs  errors.rs  mod.rs  script.rs
src/img/: draw.rs  error.rs  mod.rs  scene.rs  size.rs  util.rs
src/script/: mod.rs  parse.rs  util.rs
