[package]
name = "image_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14" }
env_logger = "0.9.0"
image = "0.23.14"
rusttype = "0.9.2"
thiserror = "1.0"
nannou = "0.18.1"
nannou_conrod = "0.18.0"
imageproc = "0.22.0"

[dependencies.serenity]
version = "0.10.10"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "unstable_discord_api", "collector"]
[dependencies.songbird]
version = "0.2.2"
features = ["driver", "serenity-rustls", "youtube-dlc"]
[dependencies.tokio]
version = "1"
features = ["full"]
